@@ -1,3 +1,7 @@
+Tue Aug  5 20:23:07 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>
+
+        * Merged from trunk r6450 through r6452
+
 Tue Aug  5 19:45:47 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>
 
         * Merged from trunk r6409 through r6449
